# mdkp

./: .gitignore  CMakeLists.txt  README.md  coral_concurrent.cpp  gen_tests.py  lp.cpp  main.cpp  mdkp_simple.cpp  rewrite_tests.py  run_benchmarks.py  run_tests.py  tmp.cpp
benchmarks/30x10_auto/: 0000  0000_res  0001  0001_res  0002  0002_etalon
benchmarks/70x30_auto/: 0000  0000_etalon  0000_res  0001  0001_etalon  0001_res  0002  0002_etalon  0002_res  0003  0003_etalon  0003_res  0004  0004_etalon  0004_res
include/: BBSolver.h  BFSolver.h  CMDArgs.h  CORALSolver.h  CoreData.h  DPSolver.h  ISolver.h  LPSolution.h  Mdkp.h  Problem.h  utils.h
scripts/: gen_tests.py  run_benchmarks.py  run_tests.py
src/: BBSolver.cpp  BFSolver.cpp  CMDArgs.cpp  CORALSolver.cpp  CoreData.cpp  DPSolver.cpp  LPSolution.cpp  Mdkp.cpp  Problem.cpp  main.cpp  utils.cpp
tests/: 00.in  00.out  01.in  01.out  02.in  02.out  03.in  03.out  04.in  04.out  05.in  05.out  06.in  06.out  07.in  07.out  08.in  08.out  09.in  09.out  10.in  10.out  11.in  11.out  12.in  12.out  13.in  13.out  14.in  14.out  15.in  15.out  16.in  16.out  17.in  17.out  18.in  18.out  19.in  19.out  (+160 more)
tests/large/: 000.in  000.out  001.in  001.out  002.in  002.out  003.in  003.out  004.in  004.out  005.in  005.out  006.in  006.out  007.in  007.out  008.in  008.out  009.in  009.out  010.in  010.out  011.in  011.out  012.in  012.out  013.in  013.out  014.in  014.out  015.in  015.out  016.in  016.out  017.in  017.out  018.in  018.out  019.in  019.out  (+160 more)
tests/medium/: 00.in  00.out  000.in  000.out  001.in  001.out  (+2189 more)
(+2062 files in other folders)
